# 17.pyclass

./: README.md  desafio.db  desafio.py  exemplo01.py  meubanco.db  pyproject.toml
